Handle the case where there is not a valid recentRoomsGroup.

I have some inactive accounts and for some rason the Q\_FOREACH was
being executed by the readEntry was returning an invalid recent list.

This handles that case and prevents a crash when accessing off the end
of the list.

REVIEW: 120588
BUG: 339196
FIXED-IN: 0.9.0